crates/data-dict/tests/snapshots/validate_spec__s07_range_type_missing_range.snap
---
source: crates/data-dict/tests/validate_spec.rs
assertion_line: 340
expression: "failing_diagnostic(\"spec/s07-range-type-missing-range.yaml\")"
---
Error: [S07]
    ╭─[ spec/s07-range-type-missing-range.yaml:10:15 ]
    │
 10 │       - name: weight
    │               ───┬──  
    │                  ╰──── column `t.weight` has type `number(quantity)` but is missing the expected `range` property
────╯

Error: [S07]
    ╭─[ spec/s07-range-type-missing-range.yaml:12:15 ]
    │
 12 │       - name: recorded_at
    │               ─────┬─────  
    │                    ╰─────── column `t.recorded_at` has type `date` but is missing the expected `range` property
────╯
